Fixed text overflow for long words in input and card prompt

--- a/src/styles/components/chat/_chat-item-card.scss
+++ b/src/styles/components/chat/_chat-item-card.scss
@@ -270,6 +270,7 @@
             &,
             > .mynah-card-body {
                 color: var(--mynah-color-text-alternate);
+                overflow-wrap: break-word;
             }
         }
         .mynah-chat-item-card-related-content > .mynah-card {
